# bookstore

./: pyproject.toml
bookstore/: settings.py
